Prevent long title overflow on mobile

--- a/src-ui/src/app/components/document-list/document-card-large/document-card-large.component.scss
+++ b/src-ui/src/app/components/document-list/document-card-large/document-card-large.component.scss
@@ -12,6 +12,10 @@
   mix-blend-mode: multiply;
 }
 
+.card-title {
+  word-break: break-word;
+}
+
 .search-score-bar {
   width: 100px;
   height: 5px;
